# jiggy

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: build.yml
src/: lib.rs  main.rs
