[package]
name = "jiggy"
version = "1.0.4-alpha"
authors = ["Marco Ivaldi <raptor@0xdeadbeef.info>"]
edition = "2024"
description = "Minimalistic cross-platform mouse jiggler written in Rust."
homepage = "https://0xdeadbeef.info/"
repository = "https://github.com/0xdea/jiggy"
license = "MIT"
keywords = ["mouse", "jiggler", "windows", "linux", "macos"]
categories = ["command-line-utilities"]
exclude = [".cargo/*", ".github/*", ".img/*", "tests/*"]

[dependencies]
mouse-rs = "0.4"
spinners = "4.1"
ctrlc = "3.4"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# enable some restrictions
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
dbg_macro = "warn"
exhaustive_enums = "warn"
redundant_type_annotations = "warn"
str_to_string = "warn"
missing_docs_in_private_items = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
multiple_unsafe_ops_per_block = "warn"
allow_attributes_without_reason = "warn"
# allow some lints
multiple_crate_versions = "allow"

[lints.rust]
missing_docs = { level = "warn" }

[profile.release]
strip = true
lto = true
opt-level = "z"
panic = "abort"

[profile.dev]
debug = false
