[package]
name = "jiggy"
version = "1.0.4-alpha"
authors = ["Marco Ivaldi <raptor@0xdeadbeef.info>"]
edition = "2024"
description = "Minimalistic cross-platform mouse jiggler written in Rust."
homepage = "https://0xdeadbeef.info/"
repository = "https://github.com/0xdea/jiggy"
license = "MIT"
keywords = ["mouse", "jiggler", "windows", "linux", "macos"]
categories = ["command-line-utilities"]
exclude = [".cargo/*", ".github/*", ".img/*", "tests/*"]

[dependencies]
mouse-rs = "0.4"
spinners = "4.1"
ctrlc = "3.4"

[profile.release]
strip = true
lto = true
opt-level = "z"
panic = "abort"

[profile.dev]
debug = false

[lints.rust]
missing_docs = { level = "warn" }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# enable some restriction lints
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
dbg_macro = "warn"
use_debug = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
missing_assert_message = "warn"
exhaustive_enums = "warn"
exhaustive_structs = "warn"
partial_pub_fields = "warn"
redundant_type_annotations = "warn"
str_to_string = "warn"
create_dir = "warn"
verbose_file_reads = "warn"
multiple_inherent_impl = "warn"
renamed_function_params = "warn"
unused_trait_names = "warn"
self_named_module_files = "warn"
tests_outside_test_module = "warn"
needless_raw_strings = "warn"
unseparated_literal_suffix = "warn"
semicolon_inside_block = "warn"
missing_docs_in_private_items = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
multiple_unsafe_ops_per_block = "warn"
# allow some lints
multiple_crate_versions = "allow"
