[package]
name = "jiggy"
version = "1.0.7"
authors = ["Marco Ivaldi <raptor@0xdeadbeef.info>"]
edition = "2024"
description = "Minimalistic cross-platform mouse jiggler written in Rust."
homepage = "https://0xdeadbeef.info/"
repository = "https://github.com/0xdea/jiggy"
license = "MIT"
keywords = ["mouse", "jiggler", "windows", "linux", "macos"]
categories = ["command-line-utilities"]
exclude = [".cargo/*", ".github/*", ".img/*", ".gitignore", ".taplo.toml", "tests/*"]

[dependencies]
mouse-rs = "0.4"
spinners = "4.1"
ctrlc = "3.4"

[profile.release]
strip = true
lto = true
opt-level = "z"
panic = "abort"

[profile.dev]
debug = false

[lints]
workspace = true

[workspace.lints.rust]
missing_docs = { level = "warn" }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }
# allow some lints
blanket_clippy_restriction_lints = "allow"
std_instead_of_core = "allow"
std_instead_of_alloc = "allow"
arbitrary_source_item_ordering = "allow"
implicit_return = "allow"
question_mark_used = "allow"
print_stdout = "allow"
print_stderr = "allow"
min_ident_chars = "allow"
single_char_lifetime_names = "allow"
impl_trait_in_params = "allow"
missing_inline_in_public_items = "allow"
single_call_fn = "allow"
use_debug = "allow"
multiple_crate_versions = "allow"
